--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "vbroker"
-version = "0.1.6"
+version = "1.1.0"
 license = "MIT"
 description = "vBroker: A Python wrapper for Viet Nam Broker API"
 repository = "https://github.com/quant-vn/vbroker"
@@ -30,6 +30,7 @@ pydantic = "^2.9.1"
 pyjwt = "^2.9.0"
 pycryptodome = "^3.20.0"
 xmljson = "^0.2.1"
+nanoid = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
